We shan't dither on silly things like images and authorship on OUR blog

--- a/src/orchid/resources/config.yml
+++ b/src/orchid/resources/config.yml
@@ -28,7 +28,7 @@ theme:
       termsAtRoot: true
     - type: 'page'
       title: 'About'
-      itemId: 'Author One'
+      itemId: '0xle'
     - type: "pages"
       atRoot: true
     - type: groupPages
