--- a/src/orchid/resources/config.yml
+++ b/src/orchid/resources/config.yml
@@ -32,6 +32,7 @@ theme:
       collectionType: pages
       collectionId: allPages
       groups:
+        -- notes
   sidebar:
     - type: recentPosts
       limit: 3
