adding some physics notes

--- a/src/orchid/resources/config.yml
+++ b/src/orchid/resources/config.yml
@@ -32,7 +32,7 @@ theme:
       collectionType: pages
       collectionId: allPages
       groups:
-        -- notes
+        - notes
   sidebar:
     - type: recentPosts
       limit: 3
